--- a/.config/youtube-dl/config
+++ b/.config/youtube-dl/config
@@ -1,1 +1,22 @@
-
+# Set default search option to youtube
+--default-search "youtube1:"
+--yes-playlist
+--output "${HOME}/Downloads/Youtube/%(title)s-%(resolution)s.%(ext)s"
+--no-overwrites
+--write-info-json
+--audio-format "flac"
+--audio-quality 0
+#
+--buffer-size 1024
+--continue
+--geo-bypass
+--hls-prefer-ffmpeg
+--no-call-home
+--no-check-certificate
+#--no-playlist
+--prefer-ffmpeg
+--prefer-free-formats
+--restrict-filenames
+--retries 3
+--skip-unavailable-fragments
+--youtube-skip-dash-manifest
