--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,6 +1,6 @@
 profile=gpu-hq
 scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
+cscale=ewa_lanczossharp # if this overtaxes your comp change value to "bilinear"
 video-sync=display-resample
 interpolation=yes
 tscale=oversample
