--- a/mpv/archwiki-mpv.conf
+++ b/mpv/archwiki-mpv.conf
@@ -1,5 +1,6 @@
-vo=gpu
+#vo=vaapi
 profile=gpu-hq
+#hwdec=vaapi
 hwdec=no
 gpu-api=vulkan
 glsl-shader="~~/FSRCNNX_x2_8-0-4-1.glsl"
@@ -11,6 +12,15 @@ video-sync=display-resample
 scaler-resizes-only
 interpolation=yes
 tscale=oversample
+really-quiet
+vulkan-async-transfer=no
+
+deband=yes
+deband-iterations=4
+deband-threshold=48
+deband-range=16
+deband-grain=48
+dither-depth=auto
 
 
 [ViewPane]
@@ -30,7 +40,7 @@ hr-seek-framedrop=no                # Fixes audio desync
 resume-playback=no                  # Not compatible with SVP
 
 # Can fix stuttering in some cases, in other cases probably causes it. Try it if you experience stuttering.
-#opengl-early-flush=yes
+opengl-early-flush=yes
 
 #mpv --profile=svp video.mkv
 
