--- a/mpv/archwiki-mpv.conf
+++ b/mpv/archwiki-mpv.conf
@@ -3,14 +3,13 @@ profile=gpu-hq
 #hwdec=vaapi
 hwdec=no
 gpu-api=vulkan
-glsl-shader="~~/FSRCNNX_x2_8-0-4-1.glsl"
+#glsl-shader="~~/FSRCNNX_x2_8-0-4-1.glsl"
 sub-auto=fuzzy
 sub-bold=yes
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 video-sync=display-resample
 scaler-resizes-only
-interpolation=yes
 tscale=oversample
 really-quiet
 vulkan-async-transfer=no
@@ -22,6 +21,10 @@ deband-range=16
 deband-grain=48
 dither-depth=auto
 
+tscale=box
+tscale-window=sphinx # or quadric
+tscale-radius=1.005
+tscale-clamp=0.0
 
 [ViewPane]
 profile=gpu-hq
