--- a/mpv/archwiki-mpv.conf
+++ b/mpv/archwiki-mpv.conf
@@ -13,6 +13,7 @@ scaler-resizes-only
 tscale=oversample
 really-quiet
 vulkan-async-transfer=no
+border=no
 
 deband=yes
 deband-iterations=4
@@ -33,6 +34,7 @@ sub-auto=fuzzy
 sub-bold=yes
 really-quiet
 keep-open=always
+border=no
 
 #mpv --profile=ViewPane video.mkv
 
