--- a/mpv/win-mpv.conf
+++ b/mpv/win-mpv.conf
@@ -49,6 +49,10 @@ script-opts=osc-title=${filename},osc-layout=bottombar,osc-seekbarstyle=bar,osc-
 
 ##Stream##
 [protocol.https]
+hls-bitrate=max
+cache=yes
+no-cache-pause
+#
 ytdl-format=bestvideo[height<=?1080]+bestaudio/best[height<=?1080]
 demuxer-seekable-cache=yes
 demuxer-max-bytes=2048MiB
@@ -76,3 +80,4 @@ loop-file=no
 #vulkan-swap-mode=mailbox
 #opengl-swapinterval=0
 #osd-msg1="FPS: ${estimated-display-fps}"
+
