--- a/mpv/win-mpv.conf
+++ b/mpv/win-mpv.conf
@@ -14,8 +14,8 @@ slang=eng,en
 sub-auto=fuzzy
 sub-ass-force-margins=yes
 embeddedfonts=no
-sub-font="Clear Sans"
-sub-ass-force-style=FontName="Clear Sans"
+sub-font="Jetbrains Mono"
+sub-ass-force-style=FontName="Jetbrains Mono"
 sub-color="#ffffffff"
 sub-border-color="#101010"
 sub-gray=yes
@@ -24,7 +24,7 @@ sub-gauss=.75
 ##Screenshot##
 screenshot-format=jpg
 screenshot-tag-colorspace=yes
-screenshot-template=C:\Users\Jottley\Pictures\mpv\%F_%p_%n
+screenshot-template=%USERPROFILE%\Pictures\mpv\%F_%p_%n
 
 ##Misc##
 #ontop
@@ -42,7 +42,7 @@ cursor-autohide=200
 prefetch-playlist=yes
 force-window=immediate
 #save-position-on-quit
-#watch-later-directory=C:\Users\Jottley\Videos\mpv\watch_later
+#watch-later-directory=%USERPROFILE%\Videos\mpv\watch_later
 
 ##UI##
 script-opts=osc-title=${filename},osc-layout=bottombar,osc-seekbarstyle=bar,osc-deadzonesize=0,osc-minmousemove=2,osc-hidetimeout=1000,osc-vidscale=no
